--- a/css/adventure.css
+++ b/css/adventure.css
@@ -1,5 +1,9 @@
 /* --- Section --- */
 
+#detailsAventure {
+	height: 400px;
+}
+
 #adventureText p {
 	font-family: arial !important;
 	font-size: 13px;
@@ -32,13 +36,31 @@
 }
 
 .my-custom-scrollbar {
-	height: 200px;
+	height: 500px;
 	overflow: auto;
 	position: relative;
 }
 
 .table-wrapper-scroll-y {
 	display: block;
+}
+
+table {
+	width: 100% !important;
+	margin: auto;
+}
+
+table th {
+	text-align: center;
+}
+
+table img {
+	width: 600px !important;
+	height: 350px !important;
+}
+
+table img:hover {
+	cursor: pointer;
 }
 
 @media screen and (max-width: 1024px) {
@@ -54,5 +76,10 @@
 	#adventureImg {
 		height: 75% !important;
 		width: 75% !important;
+	}
+
+	table img {
+		width: 300px !important;
+		height: 175px !important;
 	}
 }
