--- a/css/barrack.css
+++ b/css/barrack.css
@@ -15,6 +15,10 @@
 
 /* Quand le personnage est créé */
 
+#idPersonnage {
+    display: none;
+}
+
 #stats {
 	background-color: lightgrey;
 }
@@ -29,8 +33,8 @@
 }
 
 #inventory {
-	font-size: 20px;
-	margin-left: 0px;
+	font-size: 30px;
+	margin: 20px;
 }
 
 #shopTitle {
@@ -42,6 +46,101 @@
 	margin-left: 0px;
 }
 
+#items {
+	overflow: auto !important;
+	min-height: 200px !important;
+	max-height: 200px !important;
+	max-width: 80% !important;
+	margin: auto;
+}
+
+#items img {
+	width: 100px !important;
+	margin: 10px;
+}
+
 #shop img {
-	width: 100px;
+	width: 20px !important;
+}
+
+.imgUnclickable {
+    filter: grayscale(100%);
+}
+
+.imgClickable:hover {
+	cursor: pointer;
+}
+
+/* ---------- POPUP ----------
+   ----------------------------- */
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.contenuPopup {
+    background-color: #cfb19e;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 400px;
+}
+
+.contenuPopup h2 {
+    font-size: 30px !important;
+    margin-top: 45px;
+    text-align: center;
+}
+
+.contenuPopup p {
+    background-color: #e0c8b8;
+    width: 80%;
+    text-align: center;
+    font-size: 20px;
+    font-family: arial !important;
+    padding: 10px;
+    margin-bottom: 50px;
+    margin-top: 50px; 
+}
+
+.contenuPopup button {
+    padding: 10px;
+    font-size: 20px;
+    border: solid 1px white !important;
+}
+
+.contenuPopup button:hover {
+    background-color : #DFF2FF;
+    border: solid 1px black !important;
+    transition: 1s;
+}
+
+.fermer {
+    color: white;
+    float: right;
+    font-size: 50px !important;
+    font-weight: bold;
+}
+
+.fermer:hover,
+.fermer:focus {
+    color: #000;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 1024px) {
+	.contenuPopup {
+		width: 300px;
+	}
 }
