--- a/css/template.css
+++ b/css/template.css
@@ -12,7 +12,7 @@ body {
 	background-size: cover;
 	border-left: 1px solid black;
 	border-right: 1px solid black;
-	font-family: "NawakPolice" !important;
+	font-family: "NawakPolice";
 	width: 1024px;
 }
 
