--- a/css/adventure.css
+++ b/css/adventure.css
@@ -80,6 +80,10 @@ table img:hover {
 	cursor: pointer;
 }
 
+.nonJouable {
+    opacity: 0.5;
+}
+
 @media screen and (max-width: 1024px) {
 	#adventureSelect {
 		display: block !important;
