--- a/css/barrack.css
+++ b/css/barrack.css
@@ -71,6 +71,11 @@
 	cursor: pointer;
 }
 
+p {
+    font-family: arial !important;
+    font-size: 16px !important;
+}
+
 /* ---------- POPUP ----------
    ----------------------------- */
 
